# cress

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: complete-task.md  critique.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: plugins.md
src/cress/: __init__.py  attachments.py  build_result.py  cli.py  config.py  exceptions.py  feeds.py  manifest.py  nav.py  pages.py  plugins.py  post.py  publish.py  render.py  reports.py  server.py  shortcodes.py  site.py  slugify.py  taxonomy.py  template_library.py  vite_manifest.py  wikilinks.py
src/cress/templates/defaults/: _breadcrumbs.html  _meta.html  _nav.html  _pagination.html  _post_card.html  base.html  category.html  category_list.html  index.html  post.html  rss.xml  sitemap.xml  tag.html  tag_list.html
tests/: test_attachments.py  test_build_warnings.py  test_cli.py  test_config.py  test_default_templates.py  test_e2e.py  test_feeds.py  test_manifest.py  test_nav.py  test_pages.py  test_plugins.py  test_post.py  test_publish.py  test_render.py  test_render_engine.py  test_server.py  test_shortcodes.py  test_site_build.py  test_slug_writeback.py  test_slugify.py  test_smoke.py  test_taxonomy.py  test_vite_manifest.py  test_wikilinks.py
tests/fixtures/e2e/vite-manifest/product/.cress/: config.yaml
tests/fixtures/e2e/vite-manifest/product/fake-dist/.vite/: manifest.json
tests/fixtures/e2e/vite-manifest/vault/Blogs/Demo/: hello.md
