[project]
name = "cress"
version = "0.1.0"
description = "Publish an Obsidian vault to a static HTML blog or docs site."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "nick", email = "nick@chalkstream.dev" }
]
requires-python = ">=3.14"
keywords = [
    "obsidian",
    "static-site-generator",
    "blog",
    "markdown",
    "ssg",
    "wikilinks",
    "documentation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "django>=6.0",
    "feedgen>=1.0.0",
    "gitpython>=3.1.46",
    "mistune>=3.2.0",
    "pygments>=2.20.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/chalkstreamdev/cress"
Repository = "https://github.com/chalkstreamdev/cress"
Issues = "https://github.com/chalkstreamdev/cress/issues"
Changelog = "https://github.com/chalkstreamdev/cress/blob/master/CHANGELOG.md"

[project.scripts]
cress = "cress.cli:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/cress/site.py" = ["N801"]
"src/cress/__init__.py" = ["N801"]

[tool.mypy]
strict = true
python_version = "3.14"
mypy_path = "src"
packages = ["cress"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "cress.cli"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "feedgen",
    "feedgen.*",
    "pygments",
    "pygments.*",
    "mistune",
    "mistune.*",
    "frontmatter",
    "frontmatter.*",
    "watchdog",
    "watchdog.*",
    "django",
    "django.*",
]
ignore_missing_imports = true
